--- a/configuration.properties
+++ b/configuration.properties
@@ -10,7 +10,7 @@ fbWrongPassword=mvnvnjd..du9877
 
 !-- HotelMyCamp Negative Test Datas
 hotelMyCampWrongUser=manager1
-hotelMyCampWrongPassword=manager1!
+hotelMyCampWrongPassword=manager2
 
 userName=manager
 password=Manager1!
